// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View -> Home should render the Home UI (loading) without throwing an error 1`] = `
<Memo()
  image={
    Object {
      "name": "test",
      "src": "testImage/url.jpg",
    }
  }
  loading={true}
  updateImage={[MockFunction]}
>
  <styles__Container
    imgSrc="/assets/images/legoFlinders.jpg"
    isLoading={false}
  >
    <div
      className="styles__Container-sc-19v7chj-0 ftUPBY"
    />
  </styles__Container>
</Memo()>
`;

exports[`View -> Home should render the Home UI (not loading) without throwing an error 1`] = `
<Memo()
  image={
    Object {
      "name": "test",
      "src": "testImage/url.jpg",
    }
  }
  loading={false}
  updateImage={[MockFunction]}
>
  <styles__Container
    imgSrc="/assets/images/legoFlinders.jpg"
    isLoading={false}
  >
    <div
      className="styles__Container-sc-19v7chj-0 ftUPBY"
    />
  </styles__Container>
</Memo()>
`;

exports[`View -> Home should render the Home view with Initializer without throwing an error 1`] = `
<Memo()>
  <styles__Container
    imgSrc="/assets/images/legoFlinders.jpg"
    isLoading={false}
  >
    <div
      className="styles__Container-sc-19v7chj-0 ftUPBY"
    />
  </styles__Container>
</Memo()>
`;
